--- a/index.html
+++ b/index.html
@@ -7,33 +7,58 @@
 </head>
 <body>
     <nav class="nav">
-        <div class="nav_bg">
-            <div class="nav_bg__black"></div>
-            <div class="nav_bg__blue"></div>
+        <div class="nav__bg nav-bg">
+            <div class="nav-bg__black"></div>
+            <div class="nav-bg__blue"></div>
         </div>
-        <div class="nav_wrapper">
-            <div class="nav__icon_container">
-                <img src="img/ask_it_icon.png" alt="icon">
+        <div class="nav__wrapper nav-wrapper">
+            <div class="nav__icon-container">
+                <img class="nav__icon" src="img/ask_it_icon.png" alt="icon">
             </div>
-            <ul class="nav__list">
-                <li class="nav__list_element"><a href="#"><p>Home</p></a></li>
-                <li class="nav__list_element"><a href="#"><p>How it works</p></a></li>
-                <li class="nav__list_element"><a href="#"><p>Features</p></a></li>
-                <li class="nav__list_element"><a href="#"><p>Partners</p></a></li>
-                <li class="nav__list_element"><a href="#"><p>Events</p></a></li>
-                <li class="nav__list_element"><a href="#"><p>About us</p></a></li>
+            <ul class="nav__list nav-list">
+                <li class="nav-list__element"><a href="#"><p>Home</p></a></li>
+                <li class="nav-list__element"><a href="#"><p>How it works</p></a></li>
+                <li class="nav-list__element"><a href="#"><p>Features</p></a></li>
+                <li class="nav-list__element"><a href="#"><p>Partners</p></a></li>
+                <li class="nav-list__element"><a href="#"><p>Events</p></a></li>
+                <li class="nav-list__element"><a href="#"><p>About us</p></a></li>
             </ul>
-            <ul class="nav__log-reg_container">
-                <li class="nav__log-reg_icon-text-container">
-                    <img class="nav__log-reg_icon" src="img/sign-in.png" alt="icon">
-                    <p class="nav__log-reg_text">Log in</p>
+            <ul class="nav__log-reg log-reg">
+                <li class="log-reg__icon-text-container">
+                    <img class="log-reg__icon" src="img/sign-in.png" alt="icon">
+                    <p class="log-reg__text">Log in</p>
                 </li>
-                <li class="nav__log-reg_icon-text-container">
-                    <img class="nav__log-reg_icon" src="img/avatar.png" alt="icon">
-                    <p class="nav__log-reg_text">Register</p>
+                <li class="log-reg__icon-text-container">
+                    <img class="log-reg__icon" src="img/avatar.png" alt="icon">
+                    <p class="log-reg__text">Register</p>
                 </li>
             </ul>
         </div>
     </nav>
+    <header class="header">
+        <div class="header__wrapper">
+            <div class="header__text">
+                <div class="header__titles-container">
+                    <h1 class="header__title">Live Interaction From Audience</h1>
+                    <div class="header__lines header-lines">
+                        <div class="header-lines__first-line"></div>
+                        <div class="header-lines__second-line"></div>
+                        <div class="header-lines__third-line"></div>
+                    </div>
+                    <h3 class="header__subtitle">Q&A, Polls and Slide-sharing for Events</h3>
+                </div>
+                <div class="header__buttons header-buttons">
+                    <button class="header-buttons__create-event-btn transparent-btn header-btn">Create a event</button>
+                    <div class="header__other-buttons header-other-buttons">
+                        <button class="header-other-buttons__join-event-btn transparent-btn header-btn">Join event</button>
+                        <button class="header-other-buttons__type-code-btn white-btn header-btn">type code</button>
+                    </div>
+                </div>
+            </div>
+            <div class="header__image">
+                <img src="img/Silver.png">
+            </div>
+        </div>
+    </header>
 </body>
 </html>
