How it works added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img class="nav__icon" src="img/ask_it_icon.png" alt="icon">
             </div>
             <ul class="nav__list nav-list">
-                <li class="nav-list__element"><a href="#"><p>Home</p></a></li>
+                <li class="nav-list__element"><a href="#header"><p>Home</p></a></li>
                 <li class="nav-list__element"><a href="#"><p>How it works</p></a></li>
                 <li class="nav-list__element"><a href="#"><p>Features</p></a></li>
                 <li class="nav-list__element"><a href="#"><p>Partners</p></a></li>
@@ -35,15 +35,15 @@
             </ul>
         </div>
     </nav>
-    <header class="header">
+    <header id="header" class="header">
         <div class="header__wrapper">
             <div class="header__text">
                 <div class="header__titles-container">
                     <h1 class="header__title">Live Interaction From Audience</h1>
-                    <div class="header__lines header-lines">
-                        <div class="header-lines__first-line"></div>
-                        <div class="header-lines__second-line"></div>
-                        <div class="header-lines__third-line"></div>
+                    <div class="header__lines right-lines">
+                        <div class="header-lines__first-line white-line"></div>
+                        <div class="header-lines__second-line white-line"></div>
+                        <div class="header-lines__third-line white-line"></div>
                     </div>
                     <h3 class="header__subtitle">Q&A, Polls and Slide-sharing for Events</h3>
                 </div>
@@ -56,9 +56,57 @@
                 </div>
             </div>
             <div class="header__image">
-                <img src="img/Silver.png">
+                <img src="img/phone.png">
             </div>
         </div>
     </header>
+    <main>
+        <div class="how-it-works">
+            <div class="how-it-works__wrapper">
+                <div class="how-it-works__title-container">
+                    <h1 class="how-it-works__title">How it works</h1>
+                    <div class="lines left-lines">
+                        <div class="lines__bigger-line blue-line"></div>
+                        <div class="lines__smaller-line blue-line"></div>
+                    </div>
+                </div>
+                <div class="how-it-works__items-container">
+                    <div class="how-it-works__item how-it-works__item_selected how-it-works-item">
+                        <div class="how-it-works-item__btn-container">
+                            <button class="how-it-works-item__btn white-btn">
+                                <img class="item-icon" src="img/mobile.svg" alt="icon">
+                            </button>
+                        </div>
+                        <p class="how-it-works-item__text">Create a FREE account with us</p>
+                    </div>
+                    <div class="how-it-works__item">
+                        <div class="how-it-works-item__btn-container">
+                            <button class="how-it-works-item__btn white-btn">
+                                <img class="item-icon" src="img/discuss-issue.svg" alt="icon">
+                            </button>
+                        </div>
+                        <p class="how-it-works-item__text">Create your own event or Q&A session</p>
+                    </div>
+                    <div class="how-it-works__item">
+                        <div class="how-it-works-item__btn-container">
+                            <button class="how-it-works-item__btn white-btn">
+                                <img class="item-icon" src="img/blackberry-qr-code-variant.svg" alt="icon">
+                            </button>
+                        </div>
+                        <p class="how-it-works-item__text">Share your meeting code with the participants</p>
+                    </div>
+                    <div class="how-it-works__item">
+                        <div class="how-it-works-item__btn-container">
+                            <button class="how-it-works-item__btn white-btn">
+                                <img class="item-icon" src="img/favorites-button.svg" alt="icon">
+                            </button>
+                        </div>
+                        <p class="how-it-works-item__text">Run your meeting successfully</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer></footer>
 </body>
 </html>
