--- a/index.html
+++ b/index.html
@@ -106,6 +106,47 @@
                 </div>
             </div>
         </div>
+        <div class="interaction-block">
+            <div class="interaction__wrapper">
+                <div class="interaction__text-container">
+                    <h1 class="interaction__title">Interact with thousand of audience in no time</h1>
+                    <h3 class="interaction__subtitle">Its easier than ever</h3>
+                    <div class="line"></div>
+                    <p class="interaction__text">it’s never been easier to connect with people who speak this language. They
+                        want others to build up their self-image and confidence, and digital connectivity
+                        creates ample opportunity to tell your audience why they’re awesome. Move
+                        beyond general flattery and focus on specifics. Ask yourself, “How can I make
+                        my audience feel good about themselves?”
+                    </p>
+                    <p class="interaction__text">
+                        One option might be developing a blog series that focuses on industry wins, or
+                        spotlights companies that are doing something right. Or if you share an article
+                        with your network, you could point out a quote from the author that really
+                        resonates with you. Don’t just tell your audience you love them; tell them why.
+                    </p>
+                </div>
+                <div class="interaction__images">
+                    <div class="first-rectangle-container rectangle-container">
+                        <img class="rounded-rectangle" src="img/rounded_rectangle.svg" alt="">
+                        <img class="rounded-rectangle-bg" src="img/rounded_rectangle_bg.svg" alt="">
+                        <img class="rounded-rectangle-icon" src="img/light-bulb.png" alt="icon">
+                        <p class="rounded-rectangle-text">Ask a Question Right Now</p>
+                    </div>
+                    <div class="second-rectangle-container rectangle-container">
+                        <img class="rounded-rectangle" src="img/rounded_rectangle.svg" alt="">
+                        <img class="rounded-rectangle-bg" src="img/rounded_rectangle_bg.svg" alt="">
+                        <img class="rounded-rectangle-icon" src="img/magnifying-glass.png" alt="icon">
+                        <p class="rounded-rectangle-text">Ask a Question Right Now</p>
+                    </div>
+                    <div class="third-rectangle-container rectangle-container">
+                        <img class="rounded-rectangle" src="img/rounded_rectangle.svg" alt="">
+                        <img class="rounded-rectangle-bg" src="img/rounded_rectangle_bg.svg" alt="">
+                        <img class="rounded-rectangle-icon" src="img/contract.png" alt="icon">
+                        <p class="rounded-rectangle-text">Ask a Question Right Now</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer></footer>
 </body>
