--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <div class="header__titles-lines-container">
                         <h1 class="header__title">Live Interaction From Audience</h1>
                         <div class="header__lines-container">
-                            <div class="header__lines right-lines">
+                            <div class="header__lines">
                                 <div class="header-lines__first-line white-line"></div>
                                 <div class="header-lines__second-line white-line"></div>
                                 <div class="header-lines__third-line white-line"></div>
@@ -233,7 +233,30 @@
                 </div>
             </div>
         </div>
-        <div id="partners" class="partners"></div>
+        <div id="partners" class="partners">
+            <div class="partners__wrapper how-it-works__wrapper">
+                <div class="partners__title-container how-it-works__title-container">
+                    <h1 class="partners__title how-it-works__title">Partners</h1>
+                    <div class="lines right-lines">
+                        <div class="lines__bigger-line white-line"></div>
+                        <div class="lines__smaller-line white-line"></div>
+                    </div>
+                </div>
+                <div class="partners__images">
+                    <div class="partners__images-container">
+                        <img class="partners__icon" src="img/back-arrow.svg" alt="">
+                        <img class="partners__icon" src="img/McCANN.png" alt="">
+                        <img class="partners__icon" src="img/un-women.png" alt="">
+                        <img class="partners__icon" src="img/accenture.png" alt="">
+                        <img class="partners__icon" src="img/cisco.png" alt="">
+                        <img class="partners__icon" src="img/eventbrite.png" alt="">
+                        <img class="partners__icon" src="img/zappos.png" alt="">
+                        <img class="partners__icon" src="img/siemens.png" alt="">
+                        <img class="partners__icon" src="img/forward-arrow.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
         <div id="events" class="events"></div>
         <div id="about-us" class="about-us"></div>
     </main>
