--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             </div>
         </div>
         <div id="partners" class="partners">
-            <div class="partners__wrapper how-it-works__wrapper">
+            <div class="partners__wrapper">
                 <div class="partners__title-container how-it-works__title-container">
                     <h1 class="partners__title how-it-works__title">Partners</h1>
                     <div class="lines right-lines">
@@ -257,7 +257,67 @@
                 </div>
             </div>
         </div>
-        <div id="events" class="events"></div>
+        <div id="events" class="events">
+            <div class="events__wrapper">
+                <div class="events__title-container how-it-works__title-container">
+                    <h1 class="events__title how-it-works__title">Events</h1>
+                    <div class="lines left-lines">
+                        <div class="lines__bigger-line blue-line"></div>
+                        <div class="lines__smaller-line blue-line"></div>
+                    </div>
+                </div>
+                <div class="events__container">
+                    <div class="event external-event">
+                        <div class="event__title-container">
+                            <p class="event__title">EXTERNAL</p>
+                            <h1 class="event__title">EVENT</h1>
+                        </div>
+                        <div class="full-line green-line"></div>
+                        <div class="event__content-container">
+                            <img class="event__icon" src="img/usb-connection.png" alt="">
+                            <p class="event__text">Offers customizable
+                                on-line registration service
+                                for event organizers. Includes
+                                pricing, features, and types of accounts.
+                            </p>
+                            <button class="event__button green-line">Discover</button>
+                        </div>
+                    </div>
+                    <div class="event interactive-event">
+                        <div class="event__title-container">
+                            <p class="event__title">INTERACTIVE</p>
+                            <h1 class="event__title">EVENT</h1>
+                        </div>
+                        <div class="full-line red-line"></div>
+                        <div class="event__content-container">
+                            <img class="event__icon" src="img/interactivity.png" alt="">
+                            <p class="event__text">Offers customizable
+                                on-line registration service
+                                for event organizers. Includes
+                                pricing, features, and types of accounts.
+                            </p>
+                            <button class="event__button red-line">Discover</button>
+                        </div>
+                    </div>
+                    <div class="event internal-event">
+                        <div class="event__title-container">
+                            <p class="event__title">INTERNAL</p>
+                            <h1 class="event__title">EVENT</h1>
+                        </div>
+                        <div class="full-line orange-line"></div>
+                        <div class="event__content-container">
+                            <img class="event__icon" src="img/hard-disk.png" alt="">
+                            <p class="event__text">Offers customizable
+                                on-line registration service
+                                for event organizers. Includes
+                                pricing, features, and types of accounts.
+                            </p>
+                            <button class="event__button orange-line">Discover</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div id="about-us" class="about-us"></div>
     </main>
     <footer class="footer"></footer>
