about-us almost done

--- a/index.html
+++ b/index.html
@@ -318,7 +318,64 @@
                 </div>
             </div>
         </div>
-        <div id="about-us" class="about-us"></div>
+        <div id="about-us" class="about-us">
+            <div class="about-us__wrapper">
+                <div class="about-us__logo about-us-logo interaction-logo">
+                    <div class="about-us-logo__dot interaction-logo__dot dot"></div>
+                    <div class="about-us-logo__line interaction-logo__line line"></div>
+                    <h1 class="about-us-logo__text interaction-logo__text">Know us</h1>
+                </div>
+                <div class="about-us__title-container how-it-works__title-container">
+                    <h1 class="about-us__title how-it-works__title">About us</h1>
+                    <div class="lines right-lines">
+                        <div class="lines__bigger-line blue-line"></div>
+                        <div class="lines__smaller-line blue-line"></div>
+                    </div>
+                </div>
+                <div class="about-us-content-container">
+                    <div class="about-us__text-container about-us-text">
+                        <h1 class="about-us-text__title interaction__title">Who we are?</h1>
+                        <h3 class="about-us-text__subtitle interaction__subtitle">What we can do for you</h3>
+                        <div class="line blue-line"></div>
+                        <p class="about-us-text__text interaction__text">it’s never been easier to connect with people who speak this language. They
+                            want others to build up their self-image and confidence, and digital connectivity
+                            creates ample opportunity to tell your
+                        </p>
+                        <p class="about-us-text__text interaction__text">
+                            One option might be developing a blog series that focuses on industry wins, or
+                            spotlights companies that are doing something right. Or if you share an article
+                            with your network.
+                        </p>
+                    </div>
+                    <div class="about-us__circles">
+                        <div class="circle-container stats audience-served">
+                            <div class="stats__outer-circle green-transparent-line">
+                                <div class="stats__inner-circle green-line"></div>
+                            </div>
+                            <h1 class="stats__numbers green-text">20,145</h1>
+                            <p class="stats__name">audience served</p>
+                            <div class="full-line green-line"></div>
+                        </div>
+                        <div class="circle-container stats audience-served">
+                            <div class="stats__outer-circle red-transparent-line">
+                                <div class="stats__inner-circle red-line"></div>
+                            </div>
+                            <h1 class="stats__numbers red-text">5480</h1>
+                            <p class="stats__name">hours of service</p>
+                            <div class="full-line red-line"></div>
+                        </div>
+                        <div class="circle-container stats audience-served">
+                            <div class="stats__outer-circle orange-transparent-line">
+                                <div class="stats__inner-circle orange-line"></div>
+                            </div>
+                            <h1 class="stats__numbers orange-text">715</h1>
+                            <p class="stats__name">event covered</p>
+                            <div class="full-line orange-line"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="footer"></footer>
 </body>
